--- a/TraiHat/webapp/templates/home/banner.html
+++ b/TraiHat/webapp/templates/home/banner.html
@@ -1,8 +1,8 @@
 <div class="header-bottom">
 		<div class="container">
 			<div class="logo wow fadeInDown"  data-wow-duration=".8s" data-wow-delay=".2s">
-				<h1><a href="/">STYLE BLOG</a></h1>
-				<p><label class="of"></label>LET'S MAKE A PERFECT STYLE<label class="on"></label></p>
+				<h1><a href="/">BLOG TIN TỨC</a></h1>
+				<p><label class="of"></label>TIN TỨC CHO MỌI NHÀ<label class="on"></label></p>
 			</div>
 		</div>
 	</div>
