--- a/TraiHat/webapp/templates/user/navleft.html
+++ b/TraiHat/webapp/templates/user/navleft.html
@@ -1,14 +1,3 @@
-<!--
-     :params params: chứa danh sách tham số
-        - use:  params.get('tên tham số')
-     list params:
-          nav_...: dùng để kích hoạt tab nav khi click vào
-        + nav_dashboard
-        + nav_user
-        + nav_blog
-
--->
-
 <nav class="navbar-aside navbar-static-side" role="navigation">
     <div class="sidebar-collapse nano">
         <div class="nano-content">
@@ -22,7 +11,7 @@
                     </ul>
                 </li>
 
-                <li >
+                <li>
                     <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">Other Pages</span><span
                             class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
@@ -30,7 +19,7 @@
                         <li><a href="lockscreen.html">Lockscreen</a></li>
                         <li><a href="{{ url_for('change_password') }}">Change password</a></li>
                         <li><a href="{{ url_for('blog_list').replace("/admin/","/user/",1) }}">Blog list</a></li>
-                        <li><a href="{{ url_for('blog_detail').replace("/admin/","/user/",1) }}">Blog detail</a></li>
+                        <li><a href="{{ url_for('addblog').replace("/admin/","/user/",1) }}">Add Blog</a></li>
                         <li><a href="{{ url_for('contact') }}" target="_blank">Contact Page</a></li>
                         <li><a href="{{ url_for('about_us') }}" target="_blank">About Page</a></li>
 
@@ -54,7 +43,7 @@
                             class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
                         <li><a href="{{ url_for('blog_list').replace("/admin/","/user/",1) }}">Blog list</a></li>
-                        <li><a href="{{ url_for('blog_detail').replace("/admin/","/user/",1) }}">Blog post</a></li>
+                        <li><a href="{{ url_for('addblog').replace("/admin/","/user/",1) }}">Add Blog</a></li>
                     </ul>
                 </li>
 
