--- a/TraiHat/webapp/templates/user/navheader.html
+++ b/TraiHat/webapp/templates/user/navheader.html
@@ -34,7 +34,7 @@
                     }
                 </style>
                 <ul class="dropdown-menu  style-dropdown-menu-right dropdown-lg animated fadeInRight ">
-                    <li><a href="{{ url_for('profile').replace("/admin/","/user/",1) }}"><i class="fa fa-user"></i>My Profile</a></li>
+                    <li><a href="{{ url_for('profile', id = current_user.id|encodeID).replace("/admin/","/user/",1) }}"><i class="fa fa-user"></i>My Profile</a></li>
                     <li><a href="{{ url_for('change_password') }}">Change password</a></li>
                     <li class="divider"></li>
                     <li><a href="#"><i class="fa fa-lock"></i>Screen lock</a></li>
