thêm đổi password

--- a/TraiHat/webapp/templates/ChangePassword.html
+++ b/TraiHat/webapp/templates/ChangePassword.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>ChangePassWord</title>
-</head>
-<body>
-{% import 'layout.html' as layout with context -%}
+{% extends 'admin/base.html' %}
 
-<form method="post">
-    {{ layout.messages }}
-    {{ form.csrf_token() }}
-    {{ form.password_Old.label}}
-    {{ form.password_Old(size=32,class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50)}}
-    <br>
-    {{ form.password_New.label}}
-    {{ form.password_New(size=32,class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50)}}
-    <br>
-    {{ form.password_Comfirm.label}}
-    {{ form.password_Comfirm(size=32,class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50)}}
-    <button type="submit">Change Password</button>
-</form>
-</body>
-</html>
+{% block body %}
+    <div class="row">
+        <div class="col-6">
+            <form method="post">
+
+                {% set form = params.get('form') %}
+                {{ form.csrf_token() }}
+                {{ form.password_Old.label }}
+                {{ form.password_Old(class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50) }}
+                <br>
+                {{ form.password_New.label }}
+                {{ form.password_New(class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50) }}
+                <br>
+                {{ form.password_Comfirm.label }}
+                {{ form.password_Comfirm(class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50) }}
+                <button type="submit" class="btn btn-primary " style="margin-top:1em ">Change Password</button>
+            </form>
+        </div>
+    </div>
+
+{% endblock %}
