--- a/TraiHat/webapp/templates/admin/UserList.html
+++ b/TraiHat/webapp/templates/admin/UserList.html
@@ -64,7 +64,7 @@
                                             {% if item.active.value %}
                                             value="lock"> Lock Account
                                             {% else %}
-                                                value="unlock"> UnLock
+                                                value="unlock"> UnLock Account
                                             {% endif %}
                                     </button>
 
